# aax2m4b

./: .gitignore  README.md  aax2m4b.spec  build.sh  images.sh  pyproject.toml
design/: aax2m4b.wxg
poc/: tag.py
src/: aax2m4b.py
src/ivonet/: defines.py
src/ivonet/book/: meta.py
src/ivonet/gui/: AudiobookEntryPanel.py  MP3DropTarget.py  MainWindow.py  MenuBar.py
src/ivonet/image/: __init__.py  defines.py  images.py
src/ivonet/io/: ffprobe.py
src/ivonet/model/: Project.py
src/ivonet/threading/: ProjectConverterWorker.py
